# json2pystmt

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/json2pystmt/: __init__.py  json2pystmt.py
tests/: test_json2pystmt.py  test_json_flatten_expr.py
