[project]
name = "json2pystmt"
dynamic = ["version"]
description = "Convert JSON to executable Python statements for grep/diff operations"
authors = [
    { name = "Atsuo Ishimoto", email = "atsuoishimoto@gmail.com" }
]
requires-python = ">=3.10"
license = "MIT"
dependencies = []

[project.scripts]
json2pystmt = "json2pystmt:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/json2pystmt/__init__.py"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
    "tox>=4.0",
    "tox-uv>=1.0",
]

[tool.tox]
env_list = ["py310", "py311", "py312", "py313", "py314"]

[tool.tox.env_run_base]
runner = "uv-venv-lock-runner"
commands = [["pytest", "-v"]]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
